# lang-memgpt

./: .env.example  Makefile  README.md  example.ipynb  langgraph.json  pyproject.toml
event_server/: .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  deploy_server.sh  main.py  requirements.txt
lang_memgpt/: __init__.py  _constants.py  _schemas.py  _settings.py  _utils.py  graph.py
tests/: conftest.py
tests/evals/: test_memories.py
tests/evals/cassettes/: efd59312-3dbf-4b14-8d5e-b76d6124e90b.yaml
